--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=voucher
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/voucher?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/voucher
 spring.datasource.username=application
 spring.datasource.password=abc123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,4 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=trace
