--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=voucher
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/voucher
+spring.datasource.url=jdbc:mysql://localhost:3306/voucher?createDatabaseIfNotExist=true
 spring.datasource.username=application
 spring.datasource.password=abc123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,7 +9,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+#management
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
