--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,11 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 #management
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
+
+#MVC
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+#springdoc
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
